--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "express": "^4.14.0"
-  }
+  "license": "ISC"
 }
