--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "13.6.0",
+    "npm": "6.13.4"
+  },
   "author": "",
   "license": "ISC"
 }
