--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "npm": "6.13.4"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
